--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Search</title>
+        <title>hi i am charan</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
